--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .container {
     padding: 0 0 1em 0;
     margin-top: 0.5em;
-    width: 282px;
+    width: 202px;
     background-color: var(--cinza);
     display: flex;
     flex-direction: column;
@@ -19,4 +19,10 @@
 
 .favoritar {
     width: 25px;
+}
+
+.link {
+    text-decoration: nome;
+    color: var(--preto);
+    text-align: left;
 }
